--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
         </div>
         <div class="container">
             <div class="row menu-main d-flex align-items-center justify-content-around">
-                <div class="col-md-5 col-lg-4 mt-3 d-flex align-items-center justify-content-around justify-content-md-between">
+                <div
+                    class="col-md-5 col-lg-4 mt-3 d-flex align-items-center justify-content-around justify-content-md-between">
                     <div class="raffle text-center">
                         <a href="#" class="raffle-link">
                             щорічний розіграш
@@ -44,59 +45,164 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-8 col-lg-6 d-flex justify-content-center">
+                <div class="col-md-8 col-lg-6 d-flex justify-content-end">
                     <nav class="menu d-flex align-items-center justify-content-between">
-                            <a class="menu__link" href="#">
-                                проекти
-                            </a>
-                            <a class="menu__link" href="#">
-                                знайомство
-                            </a>
-    
-                            <a class="menu__link menu__link-border text-right px-3" href="#">
-                                калькулятор
-                                <span>
-                                    ремонту
-                                </span>
-                            </a>
-                        
+                        <a class="menu__link" href="#">
+                            проекти
+                        </a>
+                        <a class="menu__link" href="#">
+                            знайомство
+                        </a>
+
+                        <a class="menu__link menu__link-border text-right px-3" href="#">
+                            калькулятор
+                            <span>
+                                ремонту
+                            </span>
+                        </a>
+
                     </nav>
                     <nav class="menu-mobile">
                         <input type="checkbox" id="nav" class="hidden">
                         <label for="nav" class="nav-btn">
-                              <i></i>
-                              <i></i>
-                              <i></i>
+                            <i></i>
+                            <i></i>
+                            <i></i>
                         </label>
                         <div class="nav-wrapper">
-                              <ul>
-                                    <li>
-                                        <a class="menu__link" href="#">
-                                            проекти
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="menu__link" href="#">
-                                            знайомство
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="menu__link menu__link-border text-right px-3" href="#">
-                                            калькулятор
-                                            <span>
-                                                ремонту
-                                            </span>
-                                        </a>
-                                    </li>
-                              </ul>
+                            <ul>
+                                <li>
+                                    <a class="menu__link" href="#">
+                                        проекти
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="menu__link" href="#">
+                                        знайомство
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="menu__link menu__link-border text-right px-3" href="#">
+                                        калькулятор
+                                        <span>
+                                            ремонту
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                  </nav>
+                    </nav>
                 </div>
             </div>
         </div>
     </header>
 
-    <script src="./js/index.js"></script>
+    <section class="promo mt-3">
+        <div class="container-fluid">
+            <div class="row justify-content-between">
+
+                <div class="col-md-6 d-flex align-items-start justify-content-between">
+                    <div data-help="log1" class="promo-pic align-items-start">
+                        <img class="promo-img" src="images/Photo 1.png">
+                        <div id="log1" class="help d-flex justify-content-end">
+                            <div class="houses text-center">
+                                <h3>
+                                    Будинки
+                                </h3>
+                                <p class="d-flex justify-content-end">
+                                    Дизайн інтер'єру приватних будинків, котетджів та квартир
+                                </p>
+                                <a href="#" class="watch">
+                                    Watch it
+                                    <img src="images/arrow.svg" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- <div class="promo-description">
+                        <p>
+                            Какой-то текст который должен быть в блоке<br>
+                        </p> 
+                        <a href="#">Интересная ссылка</a>
+                    </div> -->
+                </div>
+
+                <div class="col-md-6 d-flex align-items-center justify-content-end">
+
+                    <div data-help="log2" class="promo-pic">
+                        <div id="log2" class="help active help-two">
+                            <div class="houses text-center">
+                                <h3>
+                                    Квартири
+                                </h3>
+                                <p class="d-flex justify-content-end">
+                                    Проекти інтер'єр дизайну квартир
+                                </p>
+                                <a href="#" class="watch">
+                                    Watch it
+                                    <img src="images/arrow.svg" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                        <img class="promo-img" src="images/Photo 1.png">
+                    </div>
+                    <!-- <div class="promo-description promo-description-left">
+                        Какой-то текст который должен быть в блоке<br>
+                        <a href="#">Интересная ссылка</a>
+                    </div> -->
+                </div>
+            </div>
+
+            <div class="row mt-5 mb-5 justify-content-between">
+                <div class="col-md-6 d-flex align-items-start justify-content-between">
+
+                    <div data-house="log3" class="promo-pic align-items-start">
+                        <img class="promo-img" src="images/Photo 1.png">
+                        <div id="log3" class="house active d-flex justify-content-end">
+                            <div class="houses text-center">
+                                <h3>
+                                    Будинки
+                                </h3>
+                                <p class="d-flex justify-content-end">
+                                    Дизайн інтер'єру приватних будинків, котетджів та квартир
+                                </p>
+                                <a href="#" class="watch">
+                                    Watch it
+                                    <img src="images/arrow.svg" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-6 d-flex align-items-center justify-content-end">
+
+                    <div data-house="log4" class="promo-pic">
+                        <div id="log4" class="house house-two">
+                            <div class="houses text-center">
+                                <h3>
+                                    Квартири
+                                </h3>
+                                <p class="d-flex justify-content-end">
+                                    Проекти інтер'єр дизайну квартир
+                                </p>
+                                <a href="#" class="watch">
+                                    Watch it
+                                    <img src="images/arrow.svg" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                        <img class="promo-img" src="images/Photo 1.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
