carousel for Sanya

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Dancing+Script:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
@@ -147,10 +148,7 @@
                         </div>
                         <img class="promo-img" src="images/Photo 1.png">
                     </div>
-                    <!-- <div class="promo-description promo-description-left">
-                        Какой-то текст который должен быть в блоке<br>
-                        <a href="#">Интересная ссылка</a>
-                    </div> -->
+
                 </div>
             </div>
 
@@ -201,7 +199,41 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="images/BG.png" alt="">
+                    
+                    <div class="wrapper">
+                        <h1 class="text-left">Поговоримо про ваш проект</h1>
+
+                        <div class="order d-flex align-items-sm-center">
+                            <p>
+                                Ми готові поділитися з вами нашим дизайном та перевести вас у захоплюючий світ творчості.
+                            </p>
+                            <a href="">
+                                Замовити
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    Slide 2
+                </div>
+                <div class="swiper-slide">
+                    Slide 3
+                </div>
+            </div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
