carousel for Sanya

--- a/src/index.html
+++ b/src/index.html
@@ -199,21 +199,21 @@
         </div>
     </section>
 
-    <section class="about">
+    <section class="about mb-5">
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img src="images/BG.png" alt="">
                     
-                    <div class="wrapper">
+                    <div class="wrapper p-3">
                         <h1 class="text-left">Поговоримо про ваш проект</h1>
 
-                        <div class="order d-flex align-items-sm-center">
-                            <p>
+                        <div class="order mt-5 d-flex align-items-center justify-content-end">
+                            <p class="text-left">
                                 Ми готові поділитися з вами нашим дизайном та перевести вас у захоплюючий світ творчості.
                             </p>
-                            <a href="">
-                                Замовити
+                            <a href="#" class="px-3 py-2 text-uppercase">
+                                замовити
                             </a>
                         </div>
                     </div>
