--- a/src/index.html
+++ b/src/index.html
@@ -100,9 +100,9 @@
 
     <section class="promo mt-3">
         <div class="container-fluid">
-            <div class="row justify-content-between">
+            <div class="row justify-content-center d-flex flex-wrap">
 
-                <div class="col-md-6 d-flex align-items-start justify-content-between">
+                <div class="col-md-6 col-lg-6 d-flex align-items-start justify-content-between">
                     <div data-help="log1" class="promo-pic align-items-start">
                         <img class="promo-img" src="images/Photo 1.png">
                         <div id="log1" class="help d-flex justify-content-end">
@@ -129,7 +129,7 @@
                     </div> -->
                 </div>
 
-                <div class="col-md-6 d-flex align-items-center justify-content-end">
+                <div class="col-md-6 col-lg-6 d-flex align-items-center justify-content-end">
 
                     <div data-help="log2" class="promo-pic">
                         <div id="log2" class="help active help-two">
@@ -204,13 +204,15 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img src="images/BG.png" alt="">
-                    
-                    <div class="wrapper p-3">
-                        <h1 class="text-left">Поговоримо про ваш проект</h1>
 
-                        <div class="order mt-5 d-flex align-items-center justify-content-end">
+
+                    <div class="wrapper p-3">
+                        <h1 class="text-left">Поговоримо про ваш проект!</h1>
+
+                        <div class="order mt-5 d-flex align-items-start justify-content-end">
                             <p class="text-left">
-                                Ми готові поділитися з вами нашим дизайном та перевести вас у захоплюючий світ творчості.
+                                Ми готові поділитися з вами нашим дизайном та перевести вас у захоплюючий
+                                світ творчості.
                             </p>
                             <a href="#" class="px-3 py-2 text-uppercase">
                                 замовити
@@ -231,8 +233,150 @@
         </div>
     </section>
 
+    <section class="principles mb-5 mx-4">
+        <div class="container block">
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center col-lg-3">
+                    <div class="principles-lists d-flex ">
+                        <div class="principles-item text-center">
+                            <h4 class="title-principles">
+                                Principles
+                            </h4>
+                            <span>
+                                принципи
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-around ">
+                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5 ">
+                    <div class=" principles-lists d-flex">
+                        <div class="principles-item  text-center">
+                            <h4 class="text-uppercase">
+                                Людина
+                            </h4>
+                            <span class="text-uppercase">
+                                Ексклюзив під індивідуальність замовника
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
+                    <div class="principles-lists d-flex">
+                        <div class="principles-item  text-center">
+                            <h4 class="text-uppercase">
+                                Ідея
+                            </h4>
+                            <span class="text-uppercase">
+                                Покликані “Працювати” на досягнення конкретних цілей замовника
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
+                    <div class=" principles-lists d-flex">
+                        <div class="principles-item  text-center">
+                            <h4 class="text-uppercase">
+                                Бюджет
+                            </h4>
+                            <span class="text-uppercase">
+                                Гнучке підлаштування під гаманець замовника
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
+                    <div class=" principles-lists d-flex">
+                        <div class="principles-item  text-center">
+                            <h4 class="text-uppercase">
+                                Баланс
+                            </h4>
+                            <span class="text-uppercase">
+                                Комерції та творчості краси та функції
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="process">
+        <div class="container block">
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center col-lg-3">
+                    <div class="principles-lists d-flex ">
+                        <div class="principles-item text-center">
+                            <h4 class="title-principles">
+                                Process
+                            </h4>
+                            <span>
+                                процес роботи та почерговість виконання
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row d-flex justify-content-between align-items-end mt-4 ">
+                <div class="col-lg-2">
+                    <div class="process-item text-center ">
+                        <h4 class="process-item__title text-uppercase">
+                            Презентація, консультація, договір, аванс
+                        </h4>
+                        <span class="process-item__count">
+                            01
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка планувальних рішень, ідея
+                        </h4>
+                        <span class="process-item__count">
+                            03
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase d-flex flex-column justify-content-end">
+                            Поетапне створення візуалізацій
+                        </h4>
+                        <span class="process-item__count">
+                            05
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка робочої документації
+                        </h4>
+                        <span class="process-item__count">
+                            07
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Супровід автора проекту
+                        </h4>
+                        <span class="process-item__count">
+                            09
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="js/index.js"></script>
 </body>
