--- a/src/index.html
+++ b/src/index.html
@@ -319,7 +319,7 @@
                 </div>
             </div>
 
-            <div class="row d-flex justify-content-between align-items-end mt-4 ">
+            <div class="row process-wrapper d-flex justify-content-between  align-items-end mt-4 mb-0">
                 <div class="col-lg-2">
                     <div class="process-item text-center ">
                         <h4 class="process-item__title text-uppercase">
@@ -360,13 +360,67 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-1">
                     <div class="process-item text-center">
                         <h4 class="process-item__title text-uppercase">
                             Супровід автора проекту
                         </h4>
                         <span class="process-item__count">
                             09
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <hr style="background-color: #90009F; height: 3px;" class="my-0">
+
+            <div class="row offset-1 process-wrapper d-flex justify-content-between align-items-end mt-4 mb-0">
+                <div class="col-lg-2">
+                    <div class="process-item text-center ">
+                        <h4 class="process-item__title text-uppercase">
+                            Презентація, консультація, договір, аванс
+                        </h4>
+                        <span class="process-item__count">
+                            02
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка планувальних рішень, ідея
+                        </h4>
+                        <span class="process-item__count">
+                            04
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase d-flex flex-column justify-content-end">
+                            Поетапне створення візуалізацій
+                        </h4>
+                        <sp class="process-item__count">
+                            06
+                        </sp>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка робочої документації
+                        </h4>
+                        <span class="process-item__count">
+                            08
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="process-item text-center">
+                        <h4 class="process-item__title text-uppercase">
+                            Супровід автора проекту
+                        </h4>
+                        <span class="process-item__count">
+                            10
                         </span>
                     </div>
                 </div>
