--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,9 @@
 
 
                     <div class="wrapper p-3">
-                        <h1 class="text-left">Поговоримо про ваш проект!</h1>
+                        <h1 class="text-left">
+                            Поговоримо про ваш проект!
+                        </h1>
 
                         <div class="order mt-5 d-flex align-items-start justify-content-end">
                             <p class="text-left">
@@ -373,55 +375,55 @@
             </div>
             <hr style="background-color: #90009F; height: 3px;" class="my-0">
 
-            <div class="row offset-1 process-wrapper d-flex justify-content-between align-items-end mt-4 mb-0">
+            <div class="row offset-1 process-wrapper d-flex justify-content-between align-items-start mt-4 mb-0">
                 <div class="col-lg-2">
                     <div class="process-item text-center ">
-                        <h4 class="process-item__title text-uppercase">
-                            Презентація, консультація, договір, аванс
-                        </h4>
                         <span class="process-item__count">
                             02
                         </span>
+                        <h4 class="process-item__title text-uppercase">
+                            Обміри, фотофіксація, аналіз референсів, формування тз
+                        </h4>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="process-item text-center">
-                        <h4 class="process-item__title text-uppercase">
-                            Розробка планувальних рішень, ідея
-                        </h4>
                         <span class="process-item__count">
                             04
                         </span>
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка планувальних рішень, ідея
+                        </h4>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="process-item text-center">
+                        <span class="process-item__count">
+                            06
+                        </span>
                         <h4 class="process-item__title text-uppercase d-flex flex-column justify-content-end">
                             Поетапне створення візуалізацій
                         </h4>
-                        <sp class="process-item__count">
-                            06
-                        </sp>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="process-item text-center">
-                        <h4 class="process-item__title text-uppercase">
-                            Розробка робочої документації
-                        </h4>
                         <span class="process-item__count">
                             08
                         </span>
+                        <h4 class="process-item__title text-uppercase">
+                            Розробка робочої документації
+                        </h4>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="process-item text-center">
-                        <h4 class="process-item__title text-uppercase">
-                            Супровід автора проекту
-                        </h4>
                         <span class="process-item__count">
                             10
                         </span>
+                        <h4 class="process-item__title text-uppercase">
+                            Супровід автора проекту
+                        </h4>
                     </div>
                 </div>
             </div>
