--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,7 @@
         </div>
     </section>
 
-    <section class="process">
+    <section class="process mb-5">
         <div class="container block">
             <div class="row">
                 <div class="col-lg-12 d-flex justify-content-center col-lg-3">
@@ -382,7 +382,7 @@
                             02
                         </span>
                         <h4 class="process-item__title text-uppercase">
-                            Обміри, фотофіксація, аналіз референсів, формування тз
+                            Обміри, фотофіксація, аналіз референсів, формування ТЗ
                         </h4>
                     </div>
                 </div>
@@ -429,6 +429,97 @@
             </div>
         </div>
     </section>
+
+    <section class="contact ">
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-end">
+                <div class="col-lg-4 pt-5">
+                    <div class="contact-about">
+                        <h3 class="contact-about__title">
+                            Contact
+                        </h3>
+                        <p class="contact-about__desc">
+                            Лідер компанії-Наталія Губиш. Маючи великий досвід виконання житлових та громадських проектів різної складності, саме вона контролює роботу від зародження ідеї до задачі замовнику
+                        </p>
+                        <img src="images/Map.png" alt="Map">
+                    </div>
+                </div>
+                <div class="col-lg-8 pt-5">
+                    <div class="contact-brif d-flex align-items-center justify-content-end">
+                        <div class="wrap">
+                            <h3 class="contact-brif__title">
+                                Brif
+                            </h3>
+                            <p class="contact-brif__desc">
+                                Бриф (від англ. brief) — це угода між готовими до співпрацісторонами, у якій прописані та враховані всі основні параметри. Вона допоможе нам зрозуміти що потрібно саме вам.
+                            </p>
+                        </div>
+                        <div class="video">
+                            <img src="images/Video.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-5 pb-5">
+                <div class="col-lg-12">
+                    <p class="about-me">
+                        Мене оточують прекрасні і талановиті люди. Кожен день збуваються мої мрії і я стаю на крок ближче до усвідомлення себе. Мій дизайн - це мій світ, де людина повинна жити з душею, робити все від серця. Я вдячна вищим силам, за можливість жити своєю справою - творити коден день, отримуючи від цього заряд колосальної енергії сподіваючись, що частинка її передасться і вам, коли ви познайомитеся з моїми роботами, тому що кожен з нас - творець, дизайнер і архітектор свого життя незалежно від роду діяльності.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer pb-3">
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-lg-2 pt-3">
+                    <div class="contacts">
+                        <div class="tel d-flex align-items-center justify-content-start pb-2">
+                            <img src="images/Vector.svg" alt="Call" class="pr-3">
+                            <a href="tel:+3809584832">
+                                +3809584832
+                            </a>
+                        </div>
+                        <div class="post d-flex align-items-center justify-content-start">
+                            <img src="images/Group.svg" alt="Mail" class="pr-2">
+                            <a href="mailto:Alina@gmail.com">
+                                Alina@gmail.com
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <nav class="d-flex justify-content-around">
+                        <a href="#">
+                            проекти
+                        </a>
+                        <a href="#">
+                            знайомство
+                        </a>
+                    </nav>
+                </div>
+
+                <div class="col-lg-3 ">
+                    <nav class="social-links d-flex justify-content-around">
+                        <a href="#">
+                            <img src="images/youtube-logotype 1.svg" alt="YouTube">
+                        </a>
+                        <a href="#">
+                            <img src="images/behance-logo 1.svg" alt="Behance">
+                        </a>
+                        <a href="#">
+                            <img src="images/facebook-app-logo 1.svg" alt="Facebook">
+                        </a>
+                        <a href="#">
+                            <img src="images/instagram-logo 1.svg" alt="Instagram">
+                        </a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
