--- a/src/index.html
+++ b/src/index.html
@@ -474,8 +474,8 @@
         <div class="container">
             <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-lg-2 pt-3">
-                    <div class="contacts">
-                        <div class="tel d-flex align-items-center justify-content-start pb-2">
+                    <div class="contacts d-flex d-lg-block justify-content-center align-items-center">
+                        <div class="tel d-flex align-items-center justify-content-start pb-2 pr-5">
                             <img src="images/Vector.svg" alt="Call" class="pr-3">
                             <a href="tel:+3809584832">
                                 +3809584832
@@ -490,7 +490,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <nav class="d-flex justify-content-around">
+                    <nav class="d-flex justify-content-around py-3">
                         <a href="#">
                             проекти
                         </a>
