--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,7 @@
         </div>
     </section>
 
-    <section class="process mb-5">
+    <section class="process mb-5 mx-4">
         <div class="container block">
             <div class="row">
                 <div class="col-lg-12 d-flex justify-content-center col-lg-3">
@@ -362,7 +362,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-1">
+                <div class="col-lg-2">
                     <div class="process-item text-center">
                         <h4 class="process-item__title text-uppercase">
                             Супровід автора проекту
@@ -375,7 +375,7 @@
             </div>
             <hr style="background-color: #90009F; height: 3px;" class="my-0">
 
-            <div class="row offset-1 process-wrapper d-flex justify-content-between align-items-start mt-4 mb-0">
+            <div class="row process-wrapper d-flex justify-content-between align-items-start mt-4 mb-0">
                 <div class="col-lg-2">
                     <div class="process-item text-center ">
                         <span class="process-item__count">
