adaptive, delete principles

--- a/src/index.html
+++ b/src/index.html
@@ -235,74 +235,6 @@
         </div>
     </section>
 
-    <section class="principles mb-5 mx-4">
-        <div class="container block">
-            <div class="row">
-                <div class="col-lg-12 d-flex justify-content-center col-lg-3">
-                    <div class="principles-lists d-flex ">
-                        <div class="principles-item text-center">
-                            <h4 class="title-principles">
-                                Principles
-                            </h4>
-                            <span>
-                                принципи
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-around ">
-                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5 ">
-                    <div class=" principles-lists d-flex">
-                        <div class="principles-item  text-center">
-                            <h4 class="text-uppercase">
-                                Людина
-                            </h4>
-                            <span class="text-uppercase">
-                                Ексклюзив під індивідуальність замовника
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
-                    <div class="principles-lists d-flex">
-                        <div class="principles-item  text-center">
-                            <h4 class="text-uppercase">
-                                Ідея
-                            </h4>
-                            <span class="text-uppercase">
-                                Покликані “Працювати” на досягнення конкретних цілей замовника
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
-                    <div class=" principles-lists d-flex">
-                        <div class="principles-item  text-center">
-                            <h4 class="text-uppercase">
-                                Бюджет
-                            </h4>
-                            <span class="text-uppercase">
-                                Гнучке підлаштування під гаманець замовника
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 d-flex justify-content-center col-lg-3 py-5">
-                    <div class=" principles-lists d-flex">
-                        <div class="principles-item  text-center">
-                            <h4 class="text-uppercase">
-                                Баланс
-                            </h4>
-                            <span class="text-uppercase">
-                                Комерції та творчості краси та функції
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="process mb-5 mx-4">
         <div class="container block">
@@ -310,7 +242,7 @@
                 <div class="col-lg-12 d-flex justify-content-center col-lg-3">
                     <div class="principles-lists d-flex ">
                         <div class="principles-item text-center">
-                            <h4 class="title-principles">
+                            <h4 class="process-title">
                                 Process
                             </h4>
                             <span>
@@ -431,9 +363,9 @@
     </section>
 
     <section class="contact ">
-        <div class="container">
-            <div class="row d-flex justify-content-between align-items-end">
-                <div class="col-lg-4 pt-5">
+        <div class="container ">
+            <div class="row d-flex justify-content-between align-items-end contact-wrapper">
+                <div class="col-lg-4 pt-5 contact-wrap">
                     <div class="contact-about">
                         <h3 class="contact-about__title">
                             Contact
@@ -482,7 +414,7 @@
                             </a>
                         </div>
                         <div class="post d-flex align-items-center justify-content-start">
-                            <img src="images/Group.svg" alt="Mail" class="pr-2">
+                            <img src="images/Group.svg" alt="Mail" class="pr-3">
                             <a href="mailto:Alina@gmail.com">
                                 Alina@gmail.com
                             </a>
@@ -523,7 +455,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="js/index.js"></script>
 </body>
